--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -16,8 +16,7 @@ jobs:
           username: ${{ secrets.USERNAME }}
           key: ${{ secrets.KEY }}
           script: |
-                  cd iwoc2.0
-                  git checkout testing
+                  cd test
                   git pull
                   npm install
                   pm2 restart test
